--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "maska": "^1.5.0",
+    "moment": "^2.29.3",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
+    "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
